@@ -46,7 +46,7 @@
 
 #include "config.h"
 
-//#define __DEBUG__
+#define __DEBUG__
 #ifdef __DEBUG__
 #define MOVEKEYS (Mod4Mask|ControlMask)
 #else
